amend about structure

--- a/about.html
+++ b/about.html
@@ -18,46 +18,48 @@
 
 <body>
 
-<!-- NAVBAR -->
+    <!-- NAVBAR -->
 
-<nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
 
-        <a class="navbar-brand" href="index.html">Kate Llewellyn</a>
+            <a class="navbar-brand" href="index.html">Kate Llewellyn</a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="nav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">CV</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
+            <div class="collapse navbar-collapse" id="nav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">CV</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+
         </div>
+    </nav>
 
+    <div class="container">
+        <div class="content-wrapper">
+            <h1>About</h1>
+
+            <p class="p-2">My career has been shaped by a consistent thread: a desire to contribute to work that improves people’s lives in tangible ways. After studying politics, with a focus on human rights, I was naturally drawn toward organisations that centred on public value; spending over a decade working within higher education in operational and stakeholder-facing roles.</p>
+
+            <p class="p-2">During this time, I developed a reputation for being dependable and methodical in my work - someone colleagues trusted to bring structure to complex processes and support effective decision-making.</p>
+
+            <p class="p-2">My transition into technology began with a Full-Stack Software Development diploma, where I discovered a natural aptitude for technical problem-solving and a strong interest in building creative solutions. What began as a skills-driven move soon became more intentional: a recognition that when data is communicated effectively, it can influence systems and shape policy.</p>
+
+            <p class="p-2">Working within a software company further strengthened this direction. After initially supporting clients in technical environments, I progressed into a Client Success Manager role where I developed analytical dashboards and used tools such as PowerBI to surface insights and guide strategic conversations.</p>
+
+            <p class="p-2">Alongside this professional growth, becoming a parent deepened my awareness of the structural challenges that can exist within healthcare systems and workplace policies. Reading Invisible Women by Caroline Criado Perez crystallised my thinking, reinforcing how critical good data is to ensuring that women’s experiences are properly represented and understood.</p>
+
+            <p class="p-2">Today, I am focused on applying my analytical and technical skills within mission-led organisations — particularly those working across women’s health, reproductive rights, and social equity. I am especially motivated by roles where data analysis can support better decisions, stronger services, and more transparent systems.</p>
+
+            <p class="p-2">My earlier career continues to shape how I approach data - collaboratively, pragmatically, and always with an awareness that behind every dataset are real people and lived experiences.</p>
+        </div>
     </div>
-</nav>
-
-<div class="container content-wrapper">
-    <h1>About</h1>
-
-    <p class="p-2">My career has been shaped by a consistent thread: a desire to contribute to work that improves people’s lives in tangible ways. After studying politics, with a focus on human rights, I was naturally drawn toward organisations that centred on public value; spending over a decade working within higher education in operational and stakeholder-facing roles.</p>
-
-    <p class="p-2">During this time, I developed a reputation for being dependable and methodical in my work - someone colleagues trusted to bring structure to complex processes and support effective decision-making.</p>
-
-    <p class="p-2">My transition into technology began with a Full-Stack Software Development diploma, where I discovered a natural aptitude for technical problem-solving and a strong interest in building creative solutions. What began as a skills-driven move soon became more intentional: a recognition that when data is communicated effectively, it can influence systems and shape policy.</p>
-
-    <p class="p-2">Working within a software company further strengthened this direction. After initially supporting clients in technical environments, I progressed into a Client Success Manager role where I developed analytical dashboards and used tools such as PowerBI to surface insights and guide strategic conversations.</p>
-
-    <p class="p-2">Alongside this professional growth, becoming a parent deepened my awareness of the structural challenges that can exist within healthcare systems and workplace policies. Reading Invisible Women by Caroline Criado Perez crystallised my thinking, reinforcing how critical good data is to ensuring that women’s experiences are properly represented and understood.</p>
-
-    <p class="p-2">Today, I am focused on applying my analytical and technical skills within mission-led organisations — particularly those working across women’s health, reproductive rights, and social equity. I am especially motivated by roles where data analysis can support better decisions, stronger services, and more transparent systems.</p>
-
-    <p class="p-2">My earlier career continues to shape how I approach data - collaboratively, pragmatically, and always with an awareness that behind every dataset are real people and lived experiences.</p>
-</div>
     
 </body>
 </html>
