add container div to projects page

--- a/projects.html
+++ b/projects.html
@@ -38,80 +38,82 @@
     </div>
 </nav>
 
-<div class="content-wrapper">
+<div class="container">
+    <div class="content-wrapper">
 
-    <h1>Case Studies & Projects</h1>
+        <h1>Case Studies & Projects</h1>
 
-    <p class="intro">
-        A selection of data and development projects focused on social impact, labour economics,
-        and human-centred analysis.
-    </p>
-
-
-    <!-- DATA PROJECTS -->
-
-    <section>
-
-        <h2>Data Analysis</h2>
-
-        <div class="tool-row">
-            <span class="tool-chip">Tableau</span>
-            <span class="tool-chip">SQL</span>
-            <span class="tool-chip">Python</span>
-            <span class="tool-chip">Power BI</span>
-        </div>
+        <p class="intro">
+            A selection of data and development projects focused on social impact, labour economics,
+            and human-centred analysis.
+        </p>
 
 
-        <!-- PROJECT CARD -->
+        <!-- DATA PROJECTS -->
 
-        <div class="project-card">
+        <section>
 
-            <div class="project-content">
+            <h2>Data Analysis</h2>
 
-                <h3>The Lasting Economic Impact of Pregnancy Loss</h3>
+            <div class="tool-row">
+                <span class="tool-chip">Tableau</span>
+                <span class="tool-chip">SQL</span>
+                <span class="tool-chip">Python</span>
+                <span class="tool-chip">Power BI</span>
+            </div>
 
-                <p>
-                    A longitudinal analysis exploring how pregnancy loss affects women’s earnings
-                    and employment trajectories using Office for National Statistics data.
-                    The project combines event-based time analysis with interactive
-                    visualisation to uncover persistent economic impacts.
-                </p>
 
-                <div class="tool-row">
-                    <span class="tool-chip">Tableau</span>
-                    <span class="tool-chip">Data Visualisation</span>
-                    <span class="tool-chip">Labour Economics</span>
+            <!-- PROJECT CARD -->
+
+            <div class="project-card">
+
+                <div class="project-content">
+
+                    <h3>The Lasting Economic Impact of Pregnancy Loss</h3>
+
+                    <p>
+                        A longitudinal analysis exploring how pregnancy loss affects women’s earnings
+                        and employment trajectories using Office for National Statistics data.
+                        The project combines event-based time analysis with interactive
+                        visualisation to uncover persistent economic impacts.
+                    </p>
+
+                    <div class="tool-row">
+                        <span class="tool-chip">Tableau</span>
+                        <span class="tool-chip">Data Visualisation</span>
+                        <span class="tool-chip">Labour Economics</span>
+                    </div>
+
+                    <a href="pregnancyloss_project.html" class="btn-main">
+                        Read Project →
+                    </a>
+
                 </div>
-
-                <a href="pregnancyloss_project.html" class="btn-main">
-                    Read Project →
-                </a>
 
             </div>
 
-        </div>
-
-    </section>
+        </section>
 
 
 
-    <!-- WEB PROJECTS -->
+        <!-- WEB PROJECTS -->
 
-    <section>
+        <section>
 
-        <h2>Web Development</h2>
+            <h2>Web Development</h2>
 
-        <div class="tool-row">
-            <span class="tool-chip">HTML & CSS</span>
-            <span class="tool-chip">JavaScript</span>
-            <span class="tool-chip">Django</span>
-            <span class="tool-chip">React</span>
-        </div>
+            <div class="tool-row">
+                <span class="tool-chip">HTML & CSS</span>
+                <span class="tool-chip">JavaScript</span>
+                <span class="tool-chip">Django</span>
+                <span class="tool-chip">React</span>
+            </div>
 
-        <!-- Future cards go here -->
+            <!-- Future cards go here -->
 
-    </section>
+        </section>
 
+    </div>
 </div>
 
 </body>
